--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -125,3 +125,56 @@
 		}
 	}
 }
+
+// ====RESPONSIVENESS=====//
+@media only screen and (max-width: 1225px) {
+	.your-content {
+		.your-hero {
+			.your-container {
+				display: flex;
+				// flex-wrap: wrap;
+				// margin: 0 auto;
+				h1 {
+					padding-left: 30px;
+				}
+				.your-box {
+					margin: 0 auto;
+				}
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.your-content {
+		.your-hero {
+			.your-container {
+				display: flex;
+				// flex-wrap: wrap;
+				// margin: 0 auto;
+				h1 {
+					padding-left: 50px;
+					padding-bottom: 30px;
+				}
+				.your-box {
+					width: 298px;
+					min-height: 150px;
+					margin: 0 auto;
+					display: flex;
+					flex-wrap: wrap;
+					.your-image {
+						width: 298px;
+						height: 149px;
+					}
+					.your-description {
+						width: 298px;
+						min-height: 150px;
+					}
+					.edit-delete-container {
+						margin-top: 80px;
+					}
+				}
+			}
+		}
+	}
+}
