--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -72,8 +72,13 @@
 		background-color: #efa7a7;
 		font-family: $font2;
 		font-size: 25px;
+		// margin-top: 100px;
+		margin-top: 100px;
 		margin-bottom: 60px;
 		margin-left: 275px;
+	}
+	.enter {
+		margin-top: 100px;
 	}
 }
 
