--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -2,7 +2,8 @@ footer {
 	// position: absolute;
 	min-height: 60px;
 	margin-top: -70px;
-	padding-bottom: 24px;
+	// padding-bottom: 24px;
+
 	font-family: $font4;
 	color: #393939;
 	font-size: 15px;
