--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -101,6 +101,10 @@ nav {
 		border: none;
 		box-shadow: 0px 10px 6px #00000029;
 	}
+	.logout {
+	}
+	.name {
+	}
 }
 
 // =====RESPONSIVENESS====//
