--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -138,7 +138,6 @@ nav button {
   border: none;
   box-shadow: 0px 10px 6px #00000029;
 }
-
 @media only screen and (max-width: 1050px) {
   nav .logo {
     margin-top: 10px;
@@ -487,48 +486,47 @@ footer .socials .insta {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  background-color: hotpink;
 }
-.login-content .login-box {
+.login-content .login-create-container .login-box {
   width: 210px;
   height: 280px;
   margin-top: 100px;
   display: block;
+  background-color: teal;
 }
-.login-content .login-box h1 {
+.login-content .login-create-container h1 {
   font-family: LatoBlack;
   font-size: 30px;
   margin-bottom: 61px;
 }
-.login-content .login-box input {
+.login-content .login-create-container input {
   width: 209px;
+  height: 30px;
   border: none;
   margin-bottom: 51px;
   border-bottom: 3px solid #000;
   background-color: #ffd972;
+  font-family: LatoRegular;
+  font-size: 12px;
+  color: #000;
 }
-.login-content .create-box {
+.login-content .login-create-container .create-box {
   width: 250px;
   height: 450px;
+  background-color: yellowgreen;
 }
-.login-content .create-box h1 {
+.login-content .login-create-container .create-box h1 {
   font-family: LatoBlack;
   font-size: 30px;
   margin-bottom: 61px;
   letter-spacing: 1.2px;
 }
-.login-content .create-account {
+.login-content .login-create-container .create-box .create-account {
   font-family: LatoItalic;
   font-size: 12px;
 }
-.login-content input {
-  width: 209px;
-  border: none;
-  margin-bottom: 51px;
-  border-bottom: 3px solid #000;
-  background-color: #ffd972;
-}
-
-button {
+.login-content .login-create-container button {
   width: 209px;
   height: 52px;
   border-radius: 26px;
