--- a/public/scss/login.scss
+++ b/public/scss/login.scss
@@ -11,14 +11,15 @@
 		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
-	}
+		background-color: hotpink;
 
-	.login-box {
-		width: 210px;
-		height: 280px;
-		margin-top: 100px;
-		display: block;
-
+		.login-box {
+			width: 210px;
+			height: 280px;
+			margin-top: 100px;
+			display: block;
+			background-color: teal;
+		}
 		h1 {
 			font-family: $font3;
 			font-size: 30px;
@@ -27,48 +28,46 @@
 
 		input {
 			width: 209px;
+			height: 30px;
 			border: none;
 			margin-bottom: 51px;
 			border-bottom: 3px solid #000;
 			background-color: #ffd972;
+			font-family: $font6;
+			font-size: 12px;
+			color: #000;
+		}
+
+		.create-box {
+			width: 250px;
+			height: 450px;
+			background-color: yellowgreen;
+
+			h1 {
+				font-family: $font3;
+				font-size: 30px;
+				margin-bottom: 61px;
+				letter-spacing: 1.2px;
+			}
+
+			.create-account {
+				font-family: $font4;
+				font-size: 12px;
+			}
+		}
+
+		button {
+			width: 209px;
+			height: 52px;
+			border-radius: 26px;
+			background-color: #ffd972;
+			border: none;
+			box-shadow: 0px 10px 6px #00000029;
+			font-family: $font2;
+			font-size: 25px;
 		}
 	}
-
-	.create-box {
-		width: 250px;
-		height: 450px;
-
-		h1 {
-			font-family: $font3;
-			font-size: 30px;
-			margin-bottom: 61px;
-			letter-spacing: 1.2px;
-		}
-	}
-	.create-account {
-		font-family: $font4;
-		font-size: 12px;
-	}
-	input {
-		width: 209px;
-		border: none;
-		margin-bottom: 51px;
-		border-bottom: 3px solid #000;
-		background-color: #ffd972;
-	}
 }
-
-button {
-	width: 209px;
-	height: 52px;
-	border-radius: 26px;
-	background-color: #ffd972;
-	border: none;
-	box-shadow: 0px 10px 6px #00000029;
-	font-family: $font2;
-	font-size: 25px;
-}
-
 // ======RESPONSIVENESS=======//
 @media only screen and (max-width: 768px) {
 	.login-content {
