--- a/public/scss/login.scss
+++ b/public/scss/login.scss
@@ -11,14 +11,12 @@
 		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
-		background-color: hotpink;
 
 		.login-box {
 			width: 210px;
 			height: 280px;
 			margin-top: 100px;
 			display: block;
-			background-color: teal;
 		}
 		h1 {
 			font-family: $font3;
@@ -33,15 +31,15 @@
 			margin-bottom: 51px;
 			border-bottom: 3px solid #000;
 			background-color: #ffd972;
-			font-family: $font6;
+			font-family: $font3;
 			font-size: 12px;
 			color: #000;
+			letter-spacing: 2px;
 		}
 
 		.create-box {
 			width: 250px;
 			height: 450px;
-			background-color: yellowgreen;
 
 			h1 {
 				font-family: $font3;
