--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -792,6 +792,16 @@ footer .socials .insta {
   width: 128px;
   height: 42px;
 }
+.your-content .your-hero .your-box button {
+  width: 168px;
+  height: 55px;
+  border-radius: 26px;
+  background-color: #ffd972;
+  font-family: Caveat Regular;
+  font-size: 25px;
+  border: none;
+  box-shadow: 0px 10px 6px #00000029;
+}
 
 @media only screen and (max-width: 1225px) {
   .your-content .your-hero .your-container {
