--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -122,6 +122,16 @@
 					height: 42px;
 				}
 			}
+			button {
+				width: 168px;
+				height: 55px;
+				border-radius: 26px;
+				background-color: #ffd972;
+				font-family: $font2;
+				font-size: 25px;
+				border: none;
+				box-shadow: 0px 10px 6px #00000029;
+			}
 		}
 	}
 }
