--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -138,6 +138,16 @@ nav button {
   border: none;
   box-shadow: 0px 10px 6px #00000029;
 }
+nav .name {
+  position: absolute;
+  top: 100px;
+  right: 50px;
+  width: 150px;
+  font-family: Caveat Bold;
+  font-size: 25px;
+  margin: 0 auto;
+}
+
 @media only screen and (max-width: 1050px) {
   nav .logo {
     margin-top: 10px;
@@ -625,6 +635,16 @@ footer .socials .insta {
 }
 .create-content .enter {
   margin-top: 100px;
+}
+.create-content button {
+  width: 168px;
+  height: 55px;
+  border-radius: 26px;
+  background-color: #ffd972;
+  font-family: Caveat Regular;
+  font-size: 25px;
+  border: none;
+  box-shadow: 0px 10px 6px #00000029;
 }
 
 @media only screen and (max-width: 1255px) {
