--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -80,6 +80,17 @@
 	.enter {
 		margin-top: 100px;
 	}
+
+	button {
+		width: 168px;
+		height: 55px;
+		border-radius: 26px;
+		background-color: #ffd972;
+		font-family: $font2;
+		font-size: 25px;
+		border: none;
+		box-shadow: 0px 10px 6px #00000029;
+	}
 }
 
 @media only screen and (max-width: 1255px) {
