--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -646,6 +646,15 @@ footer .socials .insta {
   border: none;
   box-shadow: 0px 10px 6px #00000029;
 }
+.create-content span .name {
+  position: absolute;
+  top: 100px;
+  right: 50px;
+  width: 150px;
+  font-family: Caveat Bold;
+  font-size: 25px;
+  margin: 0 auto;
+}
 
 @media only screen and (max-width: 1255px) {
   .create-content .field-container {
