--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -91,6 +91,18 @@
 		border: none;
 		box-shadow: 0px 10px 6px #00000029;
 	}
+
+	span {
+		.name {
+			position: absolute;
+			top: 100px;
+			right: 50px;
+			width: 150px;
+			font-family: $font1;
+			font-size: 25px;
+			margin: 0 auto;
+		}
+	}
 }
 
 @media only screen and (max-width: 1255px) {
