--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -634,7 +634,7 @@ footer .socials .insta {
   margin-left: 275px;
 }
 .create-content .enter {
-  margin-top: 100px;
+  margin-top: 130px;
 }
 .create-content button {
   width: 168px;
@@ -1082,6 +1082,9 @@ footer .socials .insta {
   font-size: 20px;
   color: #000;
 }
+.editrecipe-content .instructions {
+  margin-top: 130px;
+}
 .editrecipe-content .submit-button {
   width: 422px;
   height: 52px;
@@ -1089,6 +1092,7 @@ footer .socials .insta {
   background-color: #efa7a7;
   font-family: Caveat Regular;
   font-size: 25px;
+  margin-top: 100px;
   margin-bottom: 60px;
   margin-left: 275px;
 }
@@ -1113,6 +1117,17 @@ footer .socials .insta {
     left: 520px;
   }
 }
+button {
+  width: 168px;
+  height: 55px;
+  border-radius: 26px;
+  background-color: #ffd972;
+  font-family: Caveat Regular;
+  font-size: 25px;
+  border: none;
+  box-shadow: 0px 10px 6px #00000029;
+}
+
 @media only screen and (max-width: 850px) {
   .editrecipe-content .field-container {
     width: 284px;
