--- a/public/scss/editrecipe.scss
+++ b/public/scss/editrecipe.scss
@@ -65,6 +65,10 @@
 		color: #000;
 	}
 
+	.instructions {
+		margin-top: 130px;
+	}
+
 	.submit-button {
 		width: 422px;
 		height: 52px;
@@ -72,6 +76,7 @@
 		background-color: #efa7a7;
 		font-family: $font2;
 		font-size: 25px;
+		margin-top: 100px;
 		margin-bottom: 60px;
 		margin-left: 275px;
 	}
@@ -92,6 +97,7 @@
 			.enter {
 				margin-top: 150px;
 			}
+
 			input {
 				width: 558px;
 			}
@@ -102,6 +108,16 @@
 			left: 520px;
 		}
 	}
+}
+button {
+	width: 168px;
+	height: 55px;
+	border-radius: 26px;
+	background-color: #ffd972;
+	font-family: $font2;
+	font-size: 25px;
+	border: none;
+	box-shadow: 0px 10px 6px #00000029;
 }
 
 @media only screen and (max-width: 850px) {
