--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -714,7 +714,7 @@ footer .socials .insta {
   background-repeat: no-repeat;
   display: flex;
 }
-.your-content .your-hero .your-container {
+.your-content .your-container {
   width: 1100px;
   min-height: 200px;
   margin: 220px auto;
@@ -722,18 +722,44 @@ footer .socials .insta {
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.your-content .your-hero h1 {
+.your-content .addList {
+  width: 100%;
+  height: 50px;
+}
+.your-content .addList #listName {
+  width: 525px;
+  height: 50px;
+  margin-top: 10px;
+  border-radius: 26px;
+  border: none;
+}
+.your-content .addList ::placeholder {
+  font-size: 20px;
+  text-indent: 10px;
+}
+.your-content .addList #button {
+  width: 168px;
+  height: 50px;
+  margin-left: 20px;
+  border-radius: 26px;
+  background-color: #ffd972;
+  font-family: Caveat Regular;
+  font-size: 25px;
+  border: none;
+  box-shadow: 0px 10px 6px #00000029;
+}
+.your-content h1 {
   width: 100%;
   font-family: Caveat Bold;
   font-size: 25px;
 }
-.your-content .your-hero .your-box {
+.your-content .your-box {
   width: 524px;
   min-height: 263px;
   margin-bottom: 50px;
   display: flex;
 }
-.your-content .your-hero .your-box .your-image {
+.your-content .your-box .your-image {
   width: 300px;
   height: 263px;
   border-radius: 24px;
@@ -744,20 +770,20 @@ footer .socials .insta {
   align-items: center;
   justify-content: center;
 }
-.your-content .your-hero .your-box .view {
+.your-content .your-box .view {
   width: 128px;
   height: 42px;
 }
-.your-content .your-hero .your-box .pizza {
+.your-content .your-box .pizza {
   background-image: url(../images/recipe-pizza.jpg);
 }
-.your-content .your-hero .your-box .your-description {
+.your-content .your-box .your-description {
   width: 224px;
   height: 263px;
   border-radius: 24px;
   background-color: #ffffff;
 }
-.your-content .your-hero .your-box .your-description .your-title {
+.your-content .your-box .your-description .your-title {
   width: 140px;
   border-bottom: 3px solid;
   margin: 46px auto 21px auto;
@@ -765,7 +791,7 @@ footer .socials .insta {
   font-size: 15px;
   letter-spacing: 1.5px;
 }
-.your-content .your-hero .your-box .your-description .your-text {
+.your-content .your-box .your-description .your-text {
   width: 150px;
   min-height: 100px;
   margin: 0 auto;
@@ -774,36 +800,36 @@ footer .socials .insta {
   font-family: LatoRegular;
   font-size: 9px;
 }
-.your-content .your-hero .your-box .your-description .recipe-stats {
+.your-content .your-box .your-description .recipe-stats {
   width: 84px;
   margin: 0 auto 10px auto;
   display: flex;
   justify-content: space-between;
 }
-.your-content .your-hero .your-box .your-description .icon {
+.your-content .your-box .your-description .icon {
   width: 23px;
   height: 25px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-.your-content .your-hero .your-box .your-description .timer {
+.your-content .your-box .your-description .timer {
   background-image: url(../images/icons/time.svg);
 }
-.your-content .your-hero .your-box .your-description .meal {
+.your-content .your-box .your-description .meal {
   background-image: url(../images/icons/servings.svg);
 }
-.your-content .your-hero .your-box .your-description .time {
+.your-content .your-box .your-description .time {
   width: 46px;
   font-family: LatoRegular;
   font-size: 10px;
 }
-.your-content .your-hero .your-box .your-description .servings {
+.your-content .your-box .your-description .servings {
   width: 46px;
   font-family: LatoRegular;
   font-size: 10px;
 }
-.your-content .your-hero .your-box .edit-delete-container {
+.your-content .your-box .edit-delete-container {
   position: absolute;
   width: 300px;
   height: 42px;
@@ -813,15 +839,15 @@ footer .socials .insta {
   font-family: Caveat Regular;
   font-size: 20px;
 }
-.your-content .your-hero .your-box .edit-delete-container .edit {
+.your-content .your-box .edit-delete-container .edit {
   width: 128px;
   height: 42px;
 }
-.your-content .your-hero .your-box .edit-delete-container .delete {
+.your-content .your-box .edit-delete-container .delete {
   width: 128px;
   height: 42px;
 }
-.your-content .your-hero .your-box button {
+.your-content .your-box button {
   width: 168px;
   height: 55px;
   border-radius: 26px;
