--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -19,11 +19,11 @@
 		flex-wrap: wrap;
 	}
 
-	.addList {
+	.addRecipe {
 		width: 100%;
 		height: 50px;
 
-		#listName {
+		#recipeName {
 			width: 525px;
 			height: 50px;
 			margin-top: 10px;
