--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -717,27 +717,24 @@ footer .socials .insta {
 .your-content .your-container {
   width: 1100px;
   min-height: 200px;
-  margin: 220px auto;
+  margin: 350px auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  background-color: cadetblue;
 }
-.your-content .addRecipe {
-  width: 100%;
-  height: 50px;
-}
-.your-content .addRecipe #recipeName {
+.your-content #recipeName {
   width: 525px;
   height: 50px;
   margin-top: 10px;
   border-radius: 26px;
   border: none;
 }
-.your-content .addRecipe ::placeholder {
+.your-content ::placeholder {
   font-size: 20px;
   text-indent: 10px;
 }
-.your-content .addRecipe #button {
+.your-content #button {
   width: 168px;
   height: 50px;
   margin-left: 20px;
@@ -748,18 +745,21 @@ footer .socials .insta {
   border: none;
   box-shadow: 0px 10px 6px #00000029;
 }
-.your-content h1 {
+
+h1 {
   width: 100%;
   font-family: Caveat Bold;
   font-size: 25px;
 }
-.your-content .your-box {
+
+.your-box {
   width: 524px;
   min-height: 263px;
   margin-bottom: 50px;
   display: flex;
+  background-color: coral;
 }
-.your-content .your-box .your-image {
+.your-box .your-image {
   width: 300px;
   height: 263px;
   border-radius: 24px;
@@ -770,20 +770,20 @@ footer .socials .insta {
   align-items: center;
   justify-content: center;
 }
-.your-content .your-box .view {
+.your-box .view {
   width: 128px;
   height: 42px;
 }
-.your-content .your-box .pizza {
+.your-box .pizza {
   background-image: url(../images/recipe-pizza.jpg);
 }
-.your-content .your-box .your-description {
+.your-box .your-description {
   width: 224px;
   height: 263px;
   border-radius: 24px;
   background-color: #ffffff;
 }
-.your-content .your-box .your-description .your-title {
+.your-box .your-description .your-title {
   width: 140px;
   border-bottom: 3px solid;
   margin: 46px auto 21px auto;
@@ -791,7 +791,7 @@ footer .socials .insta {
   font-size: 15px;
   letter-spacing: 1.5px;
 }
-.your-content .your-box .your-description .your-text {
+.your-box .your-description .your-text {
   width: 150px;
   min-height: 100px;
   margin: 0 auto;
@@ -800,36 +800,36 @@ footer .socials .insta {
   font-family: LatoRegular;
   font-size: 9px;
 }
-.your-content .your-box .your-description .recipe-stats {
+.your-box .your-description .recipe-stats {
   width: 84px;
   margin: 0 auto 10px auto;
   display: flex;
   justify-content: space-between;
 }
-.your-content .your-box .your-description .icon {
+.your-box .your-description .icon {
   width: 23px;
   height: 25px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-.your-content .your-box .your-description .timer {
+.your-box .your-description .timer {
   background-image: url(../images/icons/time.svg);
 }
-.your-content .your-box .your-description .meal {
+.your-box .your-description .meal {
   background-image: url(../images/icons/servings.svg);
 }
-.your-content .your-box .your-description .time {
+.your-box .your-description .time {
   width: 46px;
   font-family: LatoRegular;
   font-size: 10px;
 }
-.your-content .your-box .your-description .servings {
+.your-box .your-description .servings {
   width: 46px;
   font-family: LatoRegular;
   font-size: 10px;
 }
-.your-content .your-box .edit-delete-container {
+.your-box .edit-delete-container {
   position: absolute;
   width: 300px;
   height: 42px;
@@ -839,15 +839,19 @@ footer .socials .insta {
   font-family: Caveat Regular;
   font-size: 20px;
 }
-.your-content .your-box .edit-delete-container .edit {
+.your-box .edit-delete-container .edit {
   width: 128px;
   height: 42px;
 }
-.your-content .your-box .edit-delete-container .delete {
+.your-box .edit-delete-container .delete {
   width: 128px;
   height: 42px;
 }
-.your-content .your-box button {
+.your-box .addRecipe {
+  width: 100%;
+  height: 50px;
+}
+.your-box .addRecipe button {
   width: 168px;
   height: 55px;
   border-radius: 26px;
