--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -1,7 +1,7 @@
 .your-content {
 	.your-hero {
 		width: 100vw;
-		height: 100vh;
+		height: 100%;
 		background-image: linear-gradient(to right, rgba(167, 232, 189, .8), rgba(167, 232, 189, .8)),
 			url(../images/recipe-hero.jpg);
 		background-position: center;
@@ -12,12 +12,19 @@
 
 	.your-container {
 		width: 1100px;
-		min-height: 200px;
-		margin: 350px auto;
+		min-height: 775px;
+		margin: 200px auto;
+		// display: flex;
+		// justify-content: space-between;
+		// flex-wrap: wrap;
+	}
+
+	.recipe-boxes {
+		width: 1100px;
+		min-height: 480px;
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		background-color: cadetblue;
 	}
 
 	#recipeName {
@@ -32,32 +39,25 @@
 		font-size: 20px;
 		text-indent: 10px;
 	}
-
-	#button {
-		width: 168px;
-		height: 50px;
-		margin-left: 20px;
-		border-radius: 26px;
-		background-color: #ffd972;
-		font-family: $font2;
-		font-size: 25px;
-		border: none;
-		box-shadow: 0px 10px 6px #00000029;
-	}
 }
 
 h1 {
 	width: 100%;
 	font-family: $font1;
 	font-size: 25px;
+	display: flex;
+	.load-recipes {
+		margin-top: 0;
+	}
 }
 
 .your-box {
 	width: 524px;
-	min-height: 263px;
+	min-height: 300px;
+	margin-top: 50px;
 	margin-bottom: 50px;
 	display: flex;
-	background-color: coral;
+	position: relative;
 
 	.your-image {
 		width: 300px;
@@ -69,104 +69,128 @@ h1 {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-	}
 
-	.view {
-		width: 128px;
-		height: 42px;
-	}
-
-	.pizza {
-		background-image: url(../images/recipe-pizza.jpg);
-	}
-
-	.your-description {
-		width: 224px;
-		height: 263px;
-		border-radius: 24px;
-		background-color: #ffffff;
-
-		.your-title {
-			width: 140px;
-			border-bottom: 3px solid;
-			margin: 46px auto 21px auto;
-			font-family: $font3;
-			font-size: 15px;
-			letter-spacing: 1.5px;
-		}
-		.your-text {
-			width: 150px;
-			min-height: 100px;
-			margin: 0 auto;
-			letter-spacing: .9px;
-			line-height: 11px;
-			font-family: $font6;
-			font-size: 9px;
-		}
-		.recipe-stats {
-			width: 84px;
-			margin: 0 auto 10px auto;
-			display: flex;
-			justify-content: space-between;
-		}
-		.icon {
-			width: 23px;
-			height: 25px;
+		img {
+			width: 300px;
+			border-radius: 24px;
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
-		}
-		.timer {
-			background-image: url(../images/icons/time.svg);
-		}
-		.meal {
-			background-image: url(../images/icons/servings.svg);
-		}
-		.time {
-			width: 46px;
-			font-family: $font6;
-			font-size: 10px;
-		}
-		.servings {
-			width: 46px;
-			font-family: $font6;
-			font-size: 10px;
-		}
-	}
+			position: absolute;
 
-	.edit-delete-container {
-		position: absolute;
-		width: 300px;
-		height: 42px;
-		top: 650px;
-		display: flex;
-		justify-content: space-around;
-		font-family: $font2;
-		font-size: 20px;
-		.edit {
-			width: 128px;
-			height: 42px;
-		}
-		.delete {
-			width: 128px;
-			height: 42px;
+			// display: flex;
+			// align-items: center;
+			// justify-content: center;
 		}
 	}
-	.addRecipe {
-		width: 100%;
-		height: 50px;
-		button {
-			width: 168px;
-			height: 55px;
-			border-radius: 26px;
-			background-color: #ffd972;
-			font-family: $font2;
-			font-size: 25px;
-			border: none;
-			box-shadow: 0px 10px 6px #00000029;
-		}
+	.view {
+		width: 128px;
+		height: 42px;
+		z-index: 99;
 	}
 }
+
+// .pizza {
+// 	background-image: url(../images/recipe-pizza.jpg);
+// }
+
+.your-description {
+	width: 224px;
+	height: 263px;
+	border-radius: 24px;
+	background-color: #ffffff;
+
+	.your-title {
+		width: 140px;
+		border-bottom: 3px solid;
+		margin: 46px auto 21px auto;
+		font-family: $font3;
+		font-size: 15px;
+		letter-spacing: 1.5px;
+	}
+	.your-text {
+		width: 150px;
+		min-height: 100px;
+		margin: 0 auto;
+		letter-spacing: .9px;
+		line-height: 11px;
+		font-family: $font6;
+		font-size: 9px;
+	}
+	.recipe-stats {
+		width: 84px;
+		margin: 0 auto 10px auto;
+		display: flex;
+		justify-content: space-between;
+	}
+	.icon {
+		width: 23px;
+		height: 25px;
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+	.timer {
+		background-image: url(../images/icons/time.svg);
+	}
+	.meal {
+		background-image: url(../images/icons/servings.svg);
+	}
+	.time {
+		width: 46px;
+		font-family: $font6;
+		font-size: 10px;
+	}
+	.servings {
+		width: 46px;
+		font-family: $font6;
+		font-size: 10px;
+	}
+}
+
+.edit-delete-container {
+	position: absolute;
+	width: 300px;
+	height: 42px;
+	top: 275px;
+	display: flex;
+	justify-content: space-around;
+	font-family: $font2;
+	font-size: 20px;
+	.edit {
+		width: 128px;
+		height: 42px;
+	}
+	.delete {
+		width: 128px;
+		height: 42px;
+	}
+}
+// button {
+// 	width: 168px;
+// 	height: 50px;
+// 	margin-left: 20px;
+// 	border-radius: 26px;
+// 	background-color: #ffd972;
+// 	font-family: $font2;
+// 	font-size: 25px;
+// 	border: none;
+// 	box-shadow: 0px 10px 6px #00000029;
+// }
+// .addRecipe {
+// 	width: 100%;
+// 	height: 50px;
+// 	button {
+// 		width: 168px;
+// 		height: 55px;
+// 		border-radius: 26px;
+// 		background-color: #ffd972;
+// 		font-family: $font2;
+// 		font-size: 25px;
+// 		border: none;
+// 		box-shadow: 0px 10px 6px #00000029;
+// 	}
+// }
 
 // ====RESPONSIVENESS=====//
 @media only screen and (max-width: 1225px) {
@@ -192,8 +216,8 @@ h1 {
 		.your-hero {
 			.your-container {
 				display: flex;
-				// flex-wrap: wrap;
-				// margin: 0 auto;
+				flex-wrap: wrap;
+				margin: 0 auto;
 				h1 {
 					padding-left: 50px;
 					padding-bottom: 30px;
