--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -58,6 +58,7 @@ h1 {
 	margin-bottom: 50px;
 	display: flex;
 	position: relative;
+	cursor: pointer;
 
 	.your-image {
 		width: 300px;
@@ -166,31 +167,6 @@ h1 {
 		height: 42px;
 	}
 }
-// button {
-// 	width: 168px;
-// 	height: 50px;
-// 	margin-left: 20px;
-// 	border-radius: 26px;
-// 	background-color: #ffd972;
-// 	font-family: $font2;
-// 	font-size: 25px;
-// 	border: none;
-// 	box-shadow: 0px 10px 6px #00000029;
-// }
-// .addRecipe {
-// 	width: 100%;
-// 	height: 50px;
-// 	button {
-// 		width: 168px;
-// 		height: 55px;
-// 		border-radius: 26px;
-// 		background-color: #ffd972;
-// 		font-family: $font2;
-// 		font-size: 25px;
-// 		border: none;
-// 		box-shadow: 0px 10px 6px #00000029;
-// 	}
-// }
 
 // ====RESPONSIVENESS=====//
 @media only screen and (max-width: 1225px) {
