--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -64,8 +64,20 @@
 		font-size: 20px;
 		color: #000;
 	}
-
-	.create-button {
+	// .addRecipe {
+	// 	height: 300px;
+	// 	display: block;
+	// }
+	#recipeName {
+		width: 500px;
+		height: 50px;
+		border-radius: 26px;
+		border: 3px solid #000;
+		margin-top: 100px;
+		margin-left: 240px;
+		text-indent: 10px;
+	}
+	#create-button {
 		width: 422px;
 		height: 52px;
 		border-radius: 26px;
@@ -73,14 +85,11 @@
 		font-family: $font2;
 		font-size: 25px;
 		// margin-top: 100px;
-		margin-top: 100px;
-		margin-bottom: 60px;
+		// margin-top: 100px;
+		margin-bottom: 500px;
 		margin-left: 275px;
+		border: none;
 	}
-	.enter {
-		margin-top: 130px;
-	}
-
 	button {
 		width: 168px;
 		height: 55px;
@@ -91,6 +100,20 @@
 		border: none;
 		box-shadow: 0px 10px 6px #00000029;
 	}
+	.enter {
+		margin-top: 130px;
+	}
+
+	// button {
+	// 	width: 168px;
+	// 	height: 55px;
+	// 	border-radius: 26px;
+	// 	background-color: #ffd972;
+	// 	font-family: $font2;
+	// 	font-size: 25px;
+	// 	border: none;
+	// 	box-shadow: 0px 10px 6px #00000029;
+	// }
 
 	span {
 		.name {
