--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -31,8 +31,11 @@
 		width: 525px;
 		height: 50px;
 		margin-top: 10px;
+		margin-bottom: 20px;
 		border-radius: 26px;
 		border: none;
+	}
+	.create-button {
 	}
 
 	::placeholder {
