--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -32,6 +32,22 @@
 			margin-bottom: 100px;
 			border-bottom: 3px solid #000;
 		}
+		// .recipeName {
+		// 	width: 981px;
+		// 	height: 40px;
+		// 	border: none;
+		// 	margin-top: 150px;
+		// 	// margin-bottom: 100px;
+		// 	border-bottom: 3px solid #000;
+		// }
+		#recipeName {
+			width: 981px;
+			height: 40px;
+			border: none;
+			margin-top: 150px;
+			// margin-bottom: 100px;
+			border-bottom: 3px solid #000;
+		}
 		.attach {
 			width: 110px;
 			height: 36px;
@@ -68,15 +84,7 @@
 	// 	height: 300px;
 	// 	display: block;
 	// }
-	#recipeName {
-		width: 500px;
-		height: 50px;
-		border-radius: 26px;
-		border: 3px solid #000;
-		margin-top: 100px;
-		margin-left: 240px;
-		text-indent: 10px;
-	}
+
 	#create-button {
 		width: 422px;
 		height: 52px;
@@ -85,7 +93,7 @@
 		font-family: $font2;
 		font-size: 25px;
 		// margin-top: 100px;
-		// margin-top: 100px;
+		margin-top: 200px;
 		margin-bottom: 500px;
 		margin-left: 275px;
 		border: none;
